WebSocket Server Implemented
It can send and decode messages.
I haven't tried it with messages > 125 characters.

For sending, just use one frame.
Receiving will in theory combine frames as necessary, although I haven't tested this.

So I'm currently using std::string as a dynamic array of uint8_t
And then doing direct read/write to std::string::c_str()

It might explode in a firey ball of segfaults but it works for my tester.

I'm pretty sure I'm voilating every single one of Meyer's rules in "Effective C++"
at least once in this library...

--- a/examples/websocket.html
+++ b/examples/websocket.html
@@ -4,7 +4,7 @@
 		<script type="text/javascript">
 			function ohno(err)
 			{
-				console(err.toString());
+				console.log(err.toString());
 			}	
 
 			function main()
@@ -17,7 +17,7 @@
 					var msg = e.data;
 					console.log("Got message!");
 					document.getElementById("main").innerHTML += "<p>"+msg+"</p>";
-					setTimeout(function() {con.send("Hello\n")}, 1000);
+					setTimeout(function() {con.send("Hello!")}, 1000);
 				}
 				
 			}	
