Refactor, Fix Websocket sending/receiving
That was pretty brutal...

Spent hours on a bug... I thought use of char instead of uint8_t
was causing it but it was because I forgot to Socket::Valid virtual.
There were other things hideously wrong... my memory is fading fast...

I don't know. It works now. I hope.

wscat is netcat but using WebSockets.
This is how I found all the bugs.

--- a/examples/websocket.html
+++ b/examples/websocket.html
@@ -17,7 +17,7 @@
 					var msg = e.data;
 					console.log("Got message!");
 					document.getElementById("main").innerHTML += "<p>"+msg+"</p>";
-					setTimeout(function() {con.send("Hello!")}, 1000);
+					setTimeout(function() {con.send("Hello\nWorld\n")}, 1000);
 				}
 				
 			}	
